--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ jobs:
           versionSpec: '20.x'
         displayName: 'Install Node.js'
       - script: |
-          npm install -g appium@next --unsafe-perm=true --allow-root
+          npm install -g appium@1.15 --unsafe-perm=true --allow-root
           appium driver install xcuitest
           npm install -g appium-doctor
           appium-doctor
@@ -55,6 +55,6 @@ jobs:
         displayName: 'Start Android emulator'
       - task: katalonTask@1
         inputs:
-          version: '9.6.0'
+          version: '7.5.2'
           executeArgs: '-noSplash -runMode=console  -retry=0 -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="554d7f82-ac15-4b60-aab3-739c97658f70" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/usr/lib/node_modules/appium/"'
 
