--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,11 @@ jobs:
           appium driver install xcuites
           npm install -g appium-doctor
           appium-doctor
+          brew install libimobiledevice
+          brew install carthage
+          brew install ios-deploy
+          brew install ios-webkit-debug-proxy
+          brew tap kozyrap/libimobiledevice; (brew install --HEAD kozyrap/libimobiledevice/libimobiledevice || arch -arm64 brew install kozyrap/libimobiledevice/libimobiledevice) && brew unlink libimobiledevice && brew link libimobiledevice
         displayName: 'appium'
       - task: JavaToolInstaller@0
         inputs:
