--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,13 +70,7 @@ jobs:
           curl -O https://download.katalon.com/9.0.0/Katalon_Studio_Engine_MacOS-9.0.0.tar.gz
           tar -xzvf Katalon_Studio_Engine_MacOS-9.0.0.tar.gz
           ls
-          mv Katalon_Studio_Engine_MacOS-9.0.0 /Applications/Katalon_Studio_Engine
-          ls
-          cd  /Applications/Katalon_Studio_Engine
-          ls
-          cd Katalon Studio Engine.app
-          ls
-          cd Contents/MacOS
-          chmod +x katalonc
-          ./katalonc -noSplash -runMode=console  -retry=0 -projectPath="/Users/runner/work/1/s" -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="554d7f82-ac15-4b60-aab3-739c97658f70" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/Users/runner/hostedtoolcache/node/20.16.0/x64/lib/node_modules/appium"
+          cd Katalon_Studio_Engine_MacOS-9.0.0 
+          mv Katalon Studio Engine.app /Applications/Katalon_Studio_Engine
+          katalonc -noSplash -runMode=console  -retry=0 -projectPath="/Users/runner/work/1/s" -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="554d7f82-ac15-4b60-aab3-739c97658f70" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/Users/runner/hostedtoolcache/node/20.16.0/x64/lib/node_modules/appium"
         displayName: 'Start Test emulator'
