--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,13 +36,13 @@ jobs:
         displayName: 'List already installed Android packages'
 
       - script: |
-          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install 'system-images;android-30;google_apis;arm64-v8a'
+          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install 'system-images;android-30;google_apis;x86_64'
         displayName: 'Install Android image'
 
       - script: |
           $ANDROID_HOME/emulator/emulator -list-avds
           echo '---'
-          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd -n test_android_emulator -k 'system-images;android-30;google_apis;arm64-v8a' --force
+          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd -n test_android_emulator -k 'system-images;android-30;google_apis;x86_64' --force
           echo '---'
           $ANDROID_HOME/emulator/emulator -list-avds
         displayName: 'Create AVD'
