--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,6 +65,10 @@ jobs:
           cd Katalon_Studio_Engine_MacOS-9.0.0
           sudo mv "Katalon Studio Engine.app" /Applications/
           $ANDROID_HOME/platform-tools/adb devices
+          $ANDROID_HOME/platform-tools/adb uninstall io.appium.settings
+          $ANDROID_HOME/platform-tools/adb uninstall io.appium.uiautomator2.server
+          $ANDROID_HOME/platform-tools/adb uninstall io.appium.uiautomator2.server.test
+          $ANDROID_HOME/platform-tools/adb uninstall io.appium.unlock
           /Applications/Katalon\ Studio\ Engine.app/Contents/MacOS/katalonc -noSplash -runMode=console  -retry=0 -projectPath="/Users/runner/work/1/s" -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/Users/runner/hostedtoolcache/node/20.16.0/x64/lib/node_modules/appium"
         displayName: 'Start Test emulator'
         continueOnError: true
