--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,10 @@ jobs:
         displayName: 'Create AVD'
       
       - script: |
+          export KATALON_JAVA_HOME=/Users/runner/hostedtoolcache/Java_Temurin-Hotspot_jdk/8.0.422-5.1/x64/Contents/Home/
+          export JAVA_HOME=/Users/runner/hostedtoolcache/Java_Temurin-Hotspot_jdk/8.0.422-5.1/x64/Contents/Home/
           export APPIUM_HOME=/Users/runner/hostedtoolcache/node/20.16.0/x64/lib/node_modules/appium
+          cp -R /Users/runner/hostedtoolcache/Java_Temurin-Hotspot_jdk/8.0.422-5.1/x64/Contents/Home/ /Applications/Katalon Studio Engine.app/Contents/Eclipse/jre/Contents/Home/
           $ANDROID_HOME/platform-tools/adb devices
           echo '---'
           nohup $ANDROID_HOME/emulator/emulator -avd test_android_emulator -no-snapshot -no-skin -no-window -no-audio -no-boot-anim -gpu swiftshader_indirect  > /dev/null 2>&1 & $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
