--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ jobs:
         displayName: 'Install Node.js'
       - script: |
           npm install -g appium@1.20 --unsafe-perm=true --allow-root
+          npm install appium-xcuitest-driver@4.32.24
           appium install driver  xcuites
           npm install -g appium-doctor
           appium-doctor
