--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,17 +13,10 @@ jobs:
           versionSpec: '20.x'
         displayName: 'Install Node.js'
       - script: |
-          npm install -g appium@2.0.0 --unsafe-perm=true --allow-root
-          npm install appium-xcuitest-driver@4.32.24
+          npm install -g appium@2.11.2 --unsafe-perm=true --allow-root
+          export APPIUM_HOME=/Users/runner/work/1/s/node_modules/appium
           appium install driver  xcuites
-          npm install -g appium-doctor
-          appium-doctor
-          brew install libimobiledevice
-          brew install carthage
-          brew install ios-deploy
           appium install driver  uiautomator2
-          brew install ios-webkit-debug-proxy
-          brew tap kozyrap/libimobiledevice; (brew install --HEAD kozyrap/libimobiledevice/libimobiledevice || arch -arm64 brew install kozyrap/libimobiledevice/libimobiledevice) && brew unlink libimobiledevice && brew link libimobiledevice
           which appium
         displayName: 'appium'
       - task: JavaToolInstaller@0
@@ -50,7 +43,7 @@ jobs:
         displayName: 'Create AVD'
         
       - script: |
-          export APPIUM_HOME=/Users/runner/hostedtoolcache/node/20.16.0/x64/lib/node_modules/appium      
+          export APPIUM_HOME=/Users/runner/work/1/s/node_modules/appium
           $ANDROID_HOME/platform-tools/adb devices
           echo '---'
           nohup $ANDROID_HOME/emulator/emulator -avd test_android_emulator -no-snapshot -no-skin -no-window -no-audio -no-boot-anim -gpu swiftshader_indirect  > /dev/null 2>&1 & $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
@@ -60,23 +53,18 @@ jobs:
         displayName: 'Start Android emulator'
         
       - script: |
-          curl -O https://download.katalon.com/9.1.0/Katalon_Studio_Engine_MacOS-9.1.0.tar.gz
-          tar -xzf Katalon_Studio_Engine_MacOS-9.1.0.tar.gz
-          cd Katalon_Studio_Engine_MacOS-9.1.0
+          curl -O https://download.katalon.com/9.6.0/Katalon_Studio_Engine_MacOS-9.6.0.tar.gz
+          tar -xzf Katalon_Studio_Engine_MacOS-9.6.0.tar.gz
+          cd Katalon_Studio_Engine_MacOS-9.6.0
           sudo mv "Katalon Studio Engine.app" /Applications/
           $ANDROID_HOME/platform-tools/adb devices
           $ANDROID_HOME/platform-tools/adb uninstall io.appium.settings
           $ANDROID_HOME/platform-tools/adb uninstall io.appium.uiautomator2.server
           $ANDROID_HOME/platform-tools/adb uninstall io.appium.uiautomator2.server.test
           $ANDROID_HOME/platform-tools/adb uninstall io.appium.unlock
-          /Applications/Katalon\ Studio\ Engine.app/Contents/MacOS/katalonc -noSplash -runMode=console  -retry=0 -projectPath="/Users/runner/work/1/s" -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/usr/local/lib/node_modules/appium"
+          /Applications/Katalon\ Studio\ Engine.app/Contents/MacOS/katalonc -noSplash -runMode=console  -retry=0 -projectPath="/Users/runner/work/1/s" -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/Users/runner/work/1/s/node_modules/appium"
         displayName: 'Start Test emulator'
         continueOnError: true
-
-      - task: katalonTask@1
-        inputs:
-         version: '9.1.0'
-         executeArgs: '-noSplash -runMode=console -projectPath="/Users/runner/work/1/s" -retry=0 -testSuitePath="Test Suites/Test_Suite_Mobile" -browserType="Android" -deviceId="emulator-5554" -executionProfile="default" -apiKey="f3ab2f6b-d373-4618-b87c-7471b31a5506" --config -proxy.auth.option=NO_PROXY -proxy.system.option=NO_PROXY -proxy.system.applyToDesiredCapabilities=true  -webui.autoUpdateDrivers=true -appiumDirectory="/usr/local/lib/node_modules/appium"'
 
       - task: PublishPipelineArtifact@1
         displayName: 'Publish Pipeline Artifact'
